# QtWea

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  install.sh
cmake/: QtWeaConfig.cmake.in  QtWeaConfigVersion.cmake.in
